--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
             <div class="d-flex align-items-center justify-content-center justify-content-md-between w-100 flex-wrap">
 
                 <div class="d-flex align-items-center justify-content-center flex-wrap" >
-                    <a class="navbar-brand text-light logo fs-3" href="home.html">
+                    <a class="navbar-brand text-light logo fs-3" href="index.html">
                         THE BREW 
                         <span class="text-light logo"><span style="color: #de9931;" >AUTHORI</span>TEA</span>
                     </a>
                 </div>
 
                 <div class="d-flex gap-0 gap-sm-4 justify-content-evenly text-capitalize ">
-                    <a class="navbar-brand me-0 text-light display-6 "  href="home.html" >Home</a>
+                    <a class="navbar-brand me-0 text-light display-6 "  href="index.html" >Home</a>
                     <a id="cashier-link" class="navbar-brand me-0 display-6" style="color: #f2d4b1;" href="cashier.html" >Cashier</a>
                     <a id="admin-link" class="navbar-brand me-0 display-6" style="color: #f2d4b1;" href="admin.html" >Admin</a>
                     <a id="signin" class="navbar-brand me-0 display-6" style="color: #f2d4b1;" href="signin.html" >Signin</a>
