--- a/signin.html
+++ b/signin.html
@@ -25,14 +25,14 @@
             <div class="d-flex align-items-center justify-content-center justify-content-md-between w-100 flex-wrap">
 
                 <div class="d-flex align-items-center justify-content-center flex-wrap" >
-                    <a class="navbar-brand text-light logo fs-3" href="home.html">
+                    <a class="navbar-brand text-light logo fs-3" href="index.html">
                         THE BREW 
                         <span class="text-light logo"><span style="color: #de9931;" >AUTHORI</span>TEA</span>
                     </a>
                 </div>
 
                 <div class="d-flex gap-2 gap-sm-4 ">
-                    <a class="navbar-brand display-6 " style="color: #f2d4b1;" href="home.html" >Home</a>
+                    <a class="navbar-brand display-6 " style="color: #f2d4b1;" href="index.html" >Home</a>
                     <a class="navbar-brand text-light display-6 "  href="signin.html" >Signin</a>
                 </div>
             </div>
