--- a/admin.html
+++ b/admin.html
@@ -40,7 +40,7 @@
                     <a class="navbar-brand display-6 " style="color: #f2d4b1;" href="index.html" >Home</a>
                     <a class="navbar-brand display-6" style="color: #f2d4b1;" href="cashier.html" >Cashier</a>
                     <a class="navbar-brand display-6 text-light" href="admin.html" >Admin</a>
-                    <a id="logout" class="navbar-brand text-danger " onclick="logout()"  href="signin.html" >Logout</a>
+                    <a id="logout" class="navbar-brand text-danger " onclick="logout()"  href="#" >Logout</a>
                 </div>
             </div>
         </div>
