--- a/cashier.html
+++ b/cashier.html
@@ -39,7 +39,7 @@
                     <a class="navbar-brand display-6 " style="color: #f2d4b1;" href="index.html" >Home</a>
                     <a class="navbar-brand display-6 text-light" href="cashier.html" >Cashier</a>
                     <a id="admin-link" class="navbar-brand display-6" style="color: #f2d4b1;" href="admin.html" >Admin</a>
-                    <a class="navbar-brand text-danger " id="logout" onclick="logout()" href="signin.html" >Logout</a>
+                    <a class="navbar-brand text-danger " id="logout" onclick="logout()" href="#" >Logout</a>
                 </div>
                 <script type="text/javascript" >
                     if( localStorage.getItem("role") !== "admin"  ) {
