--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             if( role !== "cashier" ) cashier.setAttribute("class", "d-none")
             
             if ( role !== null ) { // change signin button to logout btn
-                signin.innerHTML = '<a class="navbar-brand text-danger " id="logout" onclick="logout()" href="signin.html" >Logout</a>'
+                signin.innerHTML = '<a class="navbar-brand text-danger " id="logout" onclick="logout()" href="#" >Logout</a>'
             }   
         </script>
     </nav>
