--- a/admin.html
+++ b/admin.html
@@ -18,6 +18,7 @@
         if( role !== "admin"  ) {
             localStorage.clear();
             window.location = "signin.html";
+            alert("You need to login first!");
         }
     </script>
 
