--- a/cashier.html
+++ b/cashier.html
@@ -125,7 +125,7 @@
                                             <tr>
                                                 <th scope="col">Item</th>
                                                 <th scope="col">Stock</th>
-                                                <th scope="col">Meduim</th>
+                                                <th scope="col">Medium</th>
                                                 <th scope="col">Large</th>
                                                 <th scope="col"></th>
                                             </tr> 
