--- a/admin.html
+++ b/admin.html
@@ -148,7 +148,7 @@
                             <tr>
                                 <th scope="col">Item</th>
                                 <th scope="col">Type</th>
-                                <th scope="col">Meduim</th>
+                                <th scope="col">Medium</th>
                                 <th scope="col">Large</th>
                                 <th scope="col"></th>
                             </tr> 
