--- a/cashier.html
+++ b/cashier.html
@@ -143,7 +143,7 @@
                                             <tr>
                                                 <th scope="col">Item</th>
                                                 <th scope="col">Stock</th>
-                                                <th scope="col">Meduim</th>
+                                                <th scope="col">Medium</th>
                                                 <th scope="col">Large</th>
                                                 <th scope="col"></th>
                                             </tr> 
@@ -161,7 +161,7 @@
                                             <tr>
                                                 <th scope="col">Item</th>
                                                 <th scope="col">Stock</th>
-                                                <th scope="col">Meduim</th>
+                                                <th scope="col">Medium</th>
                                                 <th scope="col">Large</th>
                                                 <th scope="col"></th>
                                             </tr> 
@@ -238,7 +238,7 @@
                                     <tr>
                                         <th scope="col">Item</th>
                                         <th scope="col">Type</th>
-                                        <th scope="col">Meduim</th>
+                                        <th scope="col">Medium</th>
                                         <th scope="col">Large</th>
                                         <th scope="col"></th>
                                     </tr> 
