--- a/admin.html
+++ b/admin.html
@@ -176,7 +176,7 @@
                 </div>
                 <form id="add-product-form" action="" method="post">
                     <div class="modal-body">
-                        <div id="message" class="text-danger mb-3"></div>
+                        <div id="addproduct-error-message" class="text-danger mb-3 text-center fw-bold"></div>
                         
                         <h6 class="mt-2" >Details</h6>
 
@@ -265,7 +265,7 @@
 
             <form id="create-acc-form" action="" method="post">
                 <div class="modal-body">
-                    <div id="message" class="text-danger mb-3" ></div>
+                    <div id="account-error-message" class="text-danger mb-3 text-center fw-bold" ></div>
 
                     <div class="input-group mb-3">
                         <span class="input-group-text" id="basic-addon1"><i class="bi bi-person-circle " ></i></span>
