--- a/admin.html
+++ b/admin.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
 
@@ -256,7 +256,6 @@
     <!-- Add Account -->
     <div class="modal fade" id="account-modal" tabindex="-1" aria-labelledby="account-modal-label" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered">
-
             <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title" id="account-modal-label">Add New Account</h5>
@@ -313,6 +312,27 @@
                 <form id="edit-account-form" action="" method="post">
                    <!-- editAccountForm admin.js -->
                 </form>
+            </div>
+        </div>
+    </div>
+
+    <!-- Alert Modal -->
+    <div class="modal fade " id="admin-alert" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="admineAlertLabel" aria-hidden="true">
+        <div class="modal-dialog ">
+            <div class="modal-content">
+                <div class="modal-header bg-success">
+                    <h5 class="modal-title text-light" id="admineAlertLabel">
+                        Success
+                    </h5>
+                </div>
+                <div id="admin-alert-body" class="modal-body d-flex gap-2 align-items-center p-3">
+                    <i class="bi bi-check-circle-fill text-success display-6"></i>
+                    
+                    <p id="admin-alert-message" >Account has been updated</p>
+                </div>
+                <div class="modal-footer">
+                    <button id="alert-button" onclick="reload()" type="button" class="btn btn-outline-success" data-bs-dismiss="modal">Done</button>
+                </div>
             </div>
         </div>
     </div>
