--- a/admin.html
+++ b/admin.html
@@ -279,6 +279,13 @@
                         <input id="password" required type="password" class="form-control" placeholder="Password" aria-label="Password" aria-describedby="basic-addon1">
                     </div>
 
+                    <div class="form-check mb-4 " >
+                        <input class="form-check-input" onclick="showAddAccPassword()" type="checkbox" id="show-add-acc-password">
+                        <label class="form-check-label" for="show-add-acc-password">
+                            Show Password
+                        </label>
+                    </div>
+
                     <h6 class="mt-2" >Role</h6>
 
                     <div class="d-flex gap-3">
