--- a/admin.html
+++ b/admin.html
@@ -70,6 +70,7 @@
                 <div >
                     <p class="text-light fw-light" >Weekly Revenue</p>
                     <p id="revenue-weekly" class="fs-3 text-light" >₱0.00</p>
+                    <p id="revenue-date-weekly" class="text-light fw-lighter"></p>
                     <p class="text-light fw-lighter">Average income for the whole week.</p>
                 </div>
 
