--- a/cashier.html
+++ b/cashier.html
@@ -305,7 +305,7 @@
                 <div id="receipt-body " class="modal-body ms-3 me-3">
                     <div class="mt-2 mb-2 ">
                         <h5 class="text-center fw-bold" >The Brew Authoritea</h5>
-                        <p class="text-center">Kapasigan, Pasig City</p>
+                        <p class="text-center">329 Valencia Street, Old Santa Mesa, Manila</p>
                         <p class="text-center">123-456-789</p>
                     </div>
 
